all issue fixed with about section

--- a/pages/about.html
+++ b/pages/about.html
@@ -4,13 +4,54 @@
     <title>About CryptoDash</title>
     <link rel="stylesheet" href="../css/base.css" />
     <link rel="stylesheet" href="../css/components.css" />
+    <link rel="stylesheet" href="../css/about.css" />
+
   </head>
-  <body>
+  <body class="about-page">
     <div id="header"></div>
 
     <main class="about">
       <h1>About CryptoDash</h1>
-      <p>Live crypto dashboard using CoinGecko API.</p>
+
+      <p>
+        CryptoDash is a <strong>web-based cryptocurrency dashboard</strong>
+        that displays live crypto market data using the
+        <strong>CoinGecko API</strong>.
+        It helps users track popular cryptocurrencies in a simple and
+        easy-to-understand interface.
+      </p>
+
+      <h2>🎯 Project Purpose</h2>
+      <p>
+        The main purpose of this project is to understand how real-time data
+        can be fetched from external APIs and displayed dynamically using
+        JavaScript.
+        It is designed especially for students and beginners.
+      </p>
+
+      <h2>⚙️ Technologies Used</h2>
+      <ul>
+        <li>HTML5 for structure</li>
+        <li>CSS3 for styling and layout</li>
+        <li>JavaScript (ES6) for logic and API integration</li>
+        <li>CoinGecko API for live cryptocurrency data</li>
+      </ul>
+
+      <h2>✨ Key Features</h2>
+      <ul>
+        <li>Live cryptocurrency price updates</li>
+        <li>Clean and responsive design</li>
+        <li>Reusable header and footer components</li>
+        <li>Fast and lightweight static website</li>
+      </ul>
+
+      <h2>🚀 Future Enhancements</h2>
+      <ul>
+        <li>Search and filter cryptocurrencies</li>
+        <li>Price charts and historical data</li>
+        <li>Dark mode support</li>
+        <li>User favorite coins list</li>
+      </ul>
     </main>
 
     <div id="footer"></div>
